# OhjHarj

./: .gitignore  LICENSE  Makefile  README.md  README.rtf  Untitled.rtf  koodinayte.c  koodinayte1.C  main  main.C  main.cpp  minesweeper.cpp  minesweeper.h  mineutility.cpp  sweeper.cpp  sweeper.h  utility.cpp  ~$README.rtf
TerminalVer/: .gitignore  Makefile  main.cpp  mineutility.cpp  sweeper.cpp  sweeper.h
project/: .gitignore  CMakeLists.txt  main.cpp  main.exe.manifest  resources.rc  sweeper.cpp  sweeper.h
project/build-rel/: CMakeCache.txt  Makefile  cmake_install.cmake
project/uild/: CMakeCache.txt  build.ninja  cmake_install.cmake
